--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "webpack --mode development ./frontend/src/index.js --output-path ./frontend/static/frontend",
+    "production": "webpack --mode development ./frontend/src/index.js --output-path ./frontend/static/frontend"
   },
   "keywords": [],
   "author": "",
