--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack --mode development ./frontend/src/index.js --output-path ./frontend/static/frontend",
+    "dev": "webpack --mode development --watch ./frontend/src/index.js --output-path ./frontend/static/frontend",
     "production": "webpack --mode development ./frontend/src/index.js --output-path ./frontend/static/frontend"
   },
   "keywords": [],
